<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HelloAndroid!</string>
    <string name="app_name">HelloAndroid</string>
    <string name="graph">Graph</string>
    <string name="tap">Tap !!!</string>
    <string name="happy">HAPPY</string>
    <string name="sad">SAD</string>
    <string name="angry">ANGRY</string>
    <string name="dokidoki">DOKIDOKI</string>
    <string name="week_chart">Week Graph</string>
    <string name="month_chart">Month Graph</string>
    <string name="top_back">To Top</string>

</resources>