<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/graph_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/graph" android:onClick="onGraphButtonClick"/>

    <TextView
        android:id="@+id/tap_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/tap"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/happy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/happy" android:onClick="onHeartButtonClick"/>

    <Button
        android:id="@+id/sad_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/sad" android:onClick="onHeartButtonClick"/>

    <Button
        android:id="@+id/angry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/angry" android:onClick="onHeartButtonClick"/>

    <Button
        android:id="@+id/dokidoki_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/dokidoki" android:onClick="onHeartButtonClick"/>

    <TableLayout
        android:id="@+id/counter_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/counter_row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/happy_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/happy" />
             <TextView
                android:id="@+id/happy_count"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip" />

            <TextView
                android:id="@+id/sad_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/sad" />
            <TextView
                android:id="@+id/sad_count"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip" />
        </TableRow>

        <TableRow
            android:id="@+id/counter_row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/angry_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/angry" />
            <TextView
                android:id="@+id/angry_count"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip" />

            <TextView
                android:id="@+id/dokidoki_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/dokidoki" />
            <TextView
                android:id="@+id/dokidoki_count"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip" />
        </TableRow>

    </TableLayout>
    

</LinearLayout>