<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/chart_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
          android:id="@+id/top_back_button"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="10dip"
          android:layout_weight="1"
          android:text="@string/top_back" android:onClick="onTopBackButtonClick"/>
        
        <Button
          android:id="@+id/week_chart_button"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="10dip"
          android:layout_weight="1"
          android:text="@string/week_chart" android:onClick="onWeekChartButtonClick"/>
            
        <Button
          android:id="@+id/month_chart_button"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="10dip"
          android:layout_weight="1"
          android:text="@string/month_chart" android:onClick="onMonthChartButtonClick"/>
    </TableRow>

    <TableRow
        android:id="@+id/chart_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <si.heartchecker.ChartView
          android:id="@+id/chart_view"
          android:layout_margin="3dip"
          android:layout_width="450dip"
          android:layout_height="wrap_content"
           />
    </TableRow>

</TableLayout>